--- a/src/main/resources/templates/readme.html
+++ b/src/main/resources/templates/readme.html
@@ -99,6 +99,16 @@
 					<li class="layui-timeline-item">
 						<i class="layui-icon layui-timeline-axis"></i>
 						<div class="layui-timeline-content layui-text">
+							<h3 class="layui-timeline-title">2021-06-25</h3>
+							<p>
+								引入数据库版本管理flyway，方便管理数据库表变更。修改项目结构
+							</p>
+						</div>
+					</li>
+
+					<li class="layui-timeline-item">
+						<i class="layui-icon layui-timeline-axis"></i>
+						<div class="layui-timeline-content layui-text">
 							<h3 class="layui-timeline-title">2021-06-20</h3>
 							<p>
 								实现了角色权限控制精确到按钮级别，可以对不同角色配置不同的菜单权限，比如没有新增权限，则在前端页面不会展示新增按钮，同时后端调用新增接口也会提示无操作权限。
