--- a/src/main/resources/templates/readme.html
+++ b/src/main/resources/templates/readme.html
@@ -12,7 +12,7 @@
 	<div class="layui-fluid" style="background-color: #f4f4f4;">
 		<div class="layui-row layui-col-space10">
 			<div class="layui-col-md6">
-		        <div style="padding: 16px 40px; background-color: #fff; margin: 16px 0px;">
+		        <div style="padding: 16px 40px; background-color: #fff; margin: 16px 0px;border-radius: 8px;box-shadow: rgb(0 0 0 / 0.2) 0px 0px 4px;">
 		        	<ul class="layui-timeline">
 				  <li class="layui-timeline-item">
 				    <i class="layui-icon layui-timeline-axis"></i>
@@ -93,7 +93,7 @@
 		        </div>
 		    </div>
 		    <div class="layui-col-md6">
-		    	<div style="padding: 16px 40px; background-color: #fff; margin: 16px 0px;">
+		    	<div style="padding: 16px 40px; background-color: #fff; margin: 16px 0px; border-radius: 8px;box-shadow: rgb(0 0 0 / 0.2) 0px 0px 4px;">
 		    		<ul class="layui-timeline">
 
 					<li class="layui-timeline-item">
@@ -101,7 +101,7 @@
 						<div class="layui-timeline-content layui-text">
 							<h3 class="layui-timeline-title">2021-06-25</h3>
 							<p>
-								引入数据库版本管理flyway，方便管理数据库表变更。修改项目结构
+								引入数据库版本管理flyway，方便管理数据库表变更。并调整了项目部分文件结构。
 							</p>
 						</div>
 					</li>
